remove version from gradle

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ def getVersionName = { ->
 } as Object
 
 group = 'com.sybit.airtable'
-version = getVersionName()
+//version = getVersionName()
 description = """API to access Airtable"""
 
 tasks.withType(JavaCompile) {
