--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: -Pversion=${{ github.event.release.tag_name || '' }} build
+          arguments: -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} build
       - name: Run Tests
         uses: gradle/gradle-build-action@v2
         with:
@@ -44,7 +44,7 @@ jobs:
       - name: Publish with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: -Pversion=${{ github.event.release.tag_name || '' }} publish
+          arguments: -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} publish
         env:
           ACTION_DEPLOY_USER: ${{ secrets.ACTION_DEPLOY_USER }}   
           ACTION_DEPLOY_TOKEN: ${{ secrets.ACTION_DEPLOY_TOKEN }}
