--- a/build.gradle
+++ b/build.gradle
@@ -90,7 +90,7 @@ configurations {
 }
 
 dependencies {
-    compile group: 'com.mashape.unirest', name: 'unirest-java', version:'1.4.9'
+    compile group: 'com.konghq', name: 'unirest-java', version: '3.13.11'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.9'
     compile group: 'org.json', name: 'json', version:'20160810'
     compile group: 'com.google.code.gson', name: 'gson', version:'2.8.5'
