--- a/build.gradle
+++ b/build.gradle
@@ -73,17 +73,17 @@ configurations {
 }
 
 dependencies {
-    compile group: 'com.konghq', name: 'unirest-java', version: '3.13.11'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.9'
-    compile group: 'org.json', name: 'json', version:'20160810'
-    compile group: 'com.google.code.gson', name: 'gson', version:'2.8.5'
-    compile group: 'commons-beanutils', name: 'commons-beanutils', version:'1.9.3'
-    compile group: 'commons-io', name: 'commons-io', version:'2.6'
-    compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.26'
+    implementation group: 'com.konghq', name: 'unirest-java', version: '3.13.11'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+    implementation group: 'org.json', name: 'json', version: '20200518'
+    implementation group: 'com.google.code.gson', name: 'gson', version:'2.8.5'
+    implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.7'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version:'1.7.26'
 
-    testCompile group: 'junit', name: 'junit', version:'4.13.2'
-    testCompile group: 'com.github.tomakehurst', name: 'wiremock', version:'2.23.2'
-    testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version:'1.7.26'
+    testImplementation group: 'junit', name: 'junit', version:'4.13.2'
+    testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version:'2.23.2'
+    testImplementation group: 'org.slf4j', name: 'slf4j-jdk14', version:'1.7.26'
 
     codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
 }
@@ -133,7 +133,7 @@ publishing {
         gpr(MavenPublication) {
             from(components.java)
         }
-        /*        
+        /*
         maven(MavenPublication) {
             artifactId = rootProject.name
             groupId = group
