--- a/build.gradle
+++ b/build.gradle
@@ -91,18 +91,18 @@ configurations {
 
 dependencies {
     compile group: 'com.mashape.unirest', name: 'unirest-java', version:'1.4.9'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.9'
-    compile group: 'org.json', name: 'json', version:'20160810'
-    compile group: 'com.google.code.gson', name: 'gson', version:'2.8.5'
-    compile group: 'commons-beanutils', name: 'commons-beanutils', version:'1.9.3'
-    compile group: 'commons-io', name: 'commons-io', version:'2.6'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'5.0.3'
+    compile group: 'org.json', name: 'json', version:'3.6.5'
+    compile group: 'com.google.code.gson', name: 'gson', version:'2.8.6'
+    compile group: 'commons-beanutils', name: 'commons-beanutils', version:'1.9.4'
+    compile group: 'commons-io', name: 'commons-io', version:'2.8.0'
     compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.26'
 
     testCompile group: 'junit', name: 'junit', version:'4.12'
-    testCompile group: 'com.github.tomakehurst', name: 'wiremock', version:'2.23.2'
+    testCompile group: 'com.github.tomakehurst', name: 'wiremock', version:'2.27.2'
     testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version:'1.7.26'
 
-    codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
+    codacy group: 'com.codacy', name: 'codacy-coverage-reporter', version: '7.1.0'
 }
 
 // custom tasks for creating source jar
