--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,19 +20,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 18
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           java-version: '18'
           distribution: 'temurin'
           cache: gradle
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
       - name: Build with Gradle
-        uses: gradle/actions/setup-gradle@v3
         run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} build
       - name: Run Tests
-        uses: gradle/actions/setup-gradle@v3
         run: ./gradlew test integrationTest
       - name: Archive test report
         uses: actions/upload-artifact@v4
@@ -40,7 +40,6 @@ jobs:
           name: Test report
           path: build/reports/tests/test
       - name: Publish with Gradle
-        uses: gradle/actions/setup-gradle@v3
         run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} publish
         env:
           ACTION_DEPLOY_USER: ${{ secrets.ACTION_DEPLOY_USER }}
