--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,13 @@ on:
   pull_request:
     branches: [master]
 
+permissions:
+  checks: write
+  pull-requests: write
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - name: Make gradlew executable
@@ -37,6 +39,14 @@ jobs:
         with:
           name: Test report
           path: build/reports/tests/test
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: |
+            build/reports/tests/**/*.xml
+            build/reports/tests/**/*.trx
+            build/reports/tests/**/*.json
       - name: Publish with Gradle
         run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} publish
         env:
