chore(CI): GitLab Action gradle run updated

--- a/build.gradle
+++ b/build.gradle
@@ -95,9 +95,7 @@ java {
 
 tasks.named('test') {
     useJUnitPlatform()
-    reports {
-        junitXml. = true
-    }
+    finalizedBy jacocoTestReport
 }
 
 tasks.named('jacocoTestReport') {
