--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,13 +32,17 @@ jobs:
           java-version: '18'
           distribution: 'temurin'
           cache: gradle
-      - name: Build with Gradle
-        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} build
+      - name: Build
+        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} build -x test - x integrationTest
+      - name: Unit Tests
+        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} test
+      - name: Integration Tests
+        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} integrationTest
       - name: Archive test report
         uses: actions/upload-artifact@v4
         with:
           name: Test report
-          path: build/reports/tests/test
+          path: build/reports/tests
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
