--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
           distribution: 'temurin'
           cache: gradle
       - name: Build
-        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} build -x test - x integrationTest
+        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} build -x check
       - name: Unit Tests
         run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} test
       - name: Integration Tests
