--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,7 @@ jobs:
             build/test-results/**/*.xml
       - name: Publish with Gradle
         run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} publish
+        if: github.event_name == 'release'
         env:
           ACTION_DEPLOY_USER: ${{ secrets.ACTION_DEPLOY_USER }}
           ACTION_DEPLOY_TOKEN: ${{ secrets.ACTION_DEPLOY_TOKEN }}
