--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,11 +33,11 @@ jobs:
           distribution: 'temurin'
           cache: gradle
       - name: Build
-        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} build -x check --scan
+        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} build -x check
       - name: Unit Tests
-        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} test --scan
+        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} test
       - name: Integration Tests
-        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} integrationTest --scan
+        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} integrationTest
         env:
           AIRTABLE_TOKEN: ${{ vars.AIRTABLE_TOKEN }}
           AIRTABLE_BASE: ${{ vars.AIRTABLE_BASE }}
