--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,38 +13,48 @@ on:
   pull_request:
     branches: [master]
 
+permissions:
+  checks: write
+  pull-requests: write
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 18
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v4
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: Set up JDK
+        uses: actions/setup-java@v4
         with:
           java-version: '18'
           distribution: 'temurin'
           cache: gradle
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} build
-      - name: Run Tests
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: test integrationTest
+      - name: Build
+        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} build -x check
+      - name: Unit Tests
+        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} test
+      - name: Integration Tests
+        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} integrationTest
+        env:
+          AIRTABLE_TOKEN: ${{ vars.AIRTABLE_TOKEN }}
+          AIRTABLE_BASE: ${{ vars.AIRTABLE_BASE }}
       - name: Archive test report
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: Test report
-          path: build/reports/tests/test          
-      - name: Publish with Gradle
-        uses: gradle/gradle-build-action@v2
+          path: build/reports/tests
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
         with:
-          arguments: -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} publish
+          files: |
+            build/test-results/**/*.xml
+      - name: Publish with Gradle
+        run: ./gradlew -Pversion=${{ github.event.release.tag_name || '1.0-SNAPSHOT' }} publish
+        if: github.event_name == 'release'
         env:
-          ACTION_DEPLOY_USER: ${{ secrets.ACTION_DEPLOY_USER }}   
+          ACTION_DEPLOY_USER: ${{ secrets.ACTION_DEPLOY_USER }}
           ACTION_DEPLOY_TOKEN: ${{ secrets.ACTION_DEPLOY_TOKEN }}
