--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
+  release:
+    branches: [master]
 
 permissions:
   checks: write
