--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
